cmake_minimum_required(VERSION 3.29)
project(CodeForces)

set(CMAKE_CXX_STANDARD 14)

add_executable(CodeForces
    112A.cpp
    236A.cpp
    263A.cpp
    266A.cpp
    281A.cpp
    339A.cpp
    50A.cpp
    50b.cpp
    791A.cpp
    nextRound.cpp
    SymbolPairs.cpp
    temp.cpp
    tempCodeRunnerFile.cpp)
